[package]
name = "wurmloch"
version = "1.0.1"
description = "Sort your filesystem by turning a folder into a wormhole"
license = "MIT"
authors = ["Daniel May <daniel.may@mailbox.org>"]
repository = "https://github.com/gonsor/wurmloch"
readme = "README.md"
edition = "2018"

[dependencies]
dirs = "3.0"
notify = "4.0"
anyhow = "1.0"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
globset = "0.4"
log = "0.4"
pretty_env_logger = "0.4"